--- a/ProjetoRH.ipynb
+++ b/ProjetoRH.ipynb
@@ -96,7 +96,7 @@
    "source": [
     "#Importando arquivo csv\n",
     "\n",
-    "df = pd.read_csv (r\"C:\\Users\\patri\\Documents\\PowerBI\\Cap13\\21-Cap13\\dadosRH.csv\")"
+    "df = pd.read_csv (\"dadosRH.csv\")"
    ]
   },
   {
@@ -1291,7 +1291,7 @@
    "source": [
     "#Importando o dataset trabalhado\n",
     "\n",
-    "dataset = pd.read_csv(r\"C:\\Users\\patri\\Documents\\PowerBI\\Cap13\\Exercício\\dadosRH_balanceado.csv\")"
+    "dataset = pd.read_csv(\"dadosRH_balanceado.csv\")"
    ]
   },
   {
@@ -1802,7 +1802,7 @@
    "id": "ecc4badf",
    "metadata": {},
    "source": [
-    "# Visualização dos ggráficos gerados em Python em dashboard gerado pelo Power BI"
+    "# Visualização dos Gráficos Gerados em Python em Dashboard do Power BI"
    ]
   },
   {
@@ -1828,7 +1828,7 @@
     "#Os gráficos produzidos em Python foram importados em Power BI e, asssim, criado um dashboard\n",
     "\n",
     "import matplotlib.image as mpimg\n",
-    "img = mpimg.imread(r'C:\\Users\\patri\\Documents\\PowerBI\\Cap13\\DashboardEmPython.jpg')\n",
+    "img = mpimg.imread('DashboardEmPython.jpg')\n",
     "imgplot = plt.imshow(img)\n",
     "plt.show()"
    ]
